--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/material": "^5.15.3",
     "@react-google-maps/api": "^2.19.2",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "google-map-react": "^2.2.1",
     "react": "^17.0.2",
